# langchain_and_langraph

./: .gitignore  env-example  text2video_generator.ipynb
Develpment_steps/: README.md
Develpment_steps/hack_api_key/: Readme.md
async_request/: async_request.ipynb
crew_ai/: README.md  index.ipynb  job_listings.csv  linkedinjobs.csv  output.html
crew_ai/chainlit_project/: pyproject.toml
crew_ai/chainlit_project/src/chainlit/: __init__.py
crew_ai/crew_flow/: crewai_flow.html  pyproject.toml
crew_ai/crew_flow/src/: main.py
crew_ai/crew_flow/src/joke_generator/: joke_generator.py
crew_ai/crew_flow/src/joke_generator_with_schema/: joke_generator.py
crew_ai/crew_flow/src/routing/: route.py
crew_ai/crewai-env/: pyvenv.cfg
crew_ai/first_crewai_project/: README.md  pyproject.toml
crew_ai/first_crewai_project/src/first_crewai_project/: main.py
crew_ai/first_uv_project/: README.md  pyproject.toml
crew_ai/helloworld/: chatbot.py  longterm_memory_test.py  pyproject.toml
crew_ai/install_uv_guide/: README.md
crew_ai/match_profile_to_positions/: README.md  pyproject.toml
crew_ai/match_profile_to_positions/src/match_profile_to_positions/: main.py
crew_ai/match_profile_to_positions/src/match_profile_to_positions/crews/matcher_cv_crew/config/: tasks.yaml
crew_ai/match_profile_to_positions/src/match_profile_to_positions/crews/read_cv_crew/: read_cv.py
crew_ai/match_profile_to_positions/src/match_profile_to_positions/crews/read_cv_crew/config/: agents.yaml  tasks.yaml
crew_ai/matching_job_profile/: .env-example  pyproject.toml
crew_ai/matching_job_profile/db/: chroma.sqlite3
crew_ai/matching_job_profile/src/matching_job_profile/: __init__.py  main.py
crew_ai/matching_job_profile/src/matching_job_profile/crews/fetching_jobs_from_linkden/: read_cv.py
crew_ai/matching_job_profile/src/matching_job_profile/crews/fetching_jobs_from_linkden/config/: agents.yaml  tasks.yaml
crew_ai/matching_job_profile/src/matching_job_profile/crews/match_cv_crew/: cv_matching.py
crew_ai/matching_job_profile/src/matching_job_profile/crews/match_cv_crew/config/: agents.yaml  tasks.yaml
crew_ai/matching_job_profile/src/matching_job_profile/crews/match_cv_crew/data/: job_listings_new.csv
crew_ai/matching_job_profile/src/matching_job_profile/crews/read_cv_crew/: read_cv.py
crew_ai/matching_job_profile/src/matching_job_profile/crews/read_cv_crew/config/: agents.yaml  tasks.yaml
crew_ai/matching_job_profile/src/matching_job_profile/crews/single_crew/: single_crew.py
crew_ai/matching_job_profile/src/matching_job_profile/crews/single_crew/config/: agents.yaml  tasks.yaml
crew_ai/mcq_generator/: README.md
crew_ai/memory_and_external_tools/: README.md  pyproject.toml
crew_ai/memory_and_external_tools/knowledge/: user_preference.txt
crew_ai/memory_and_external_tools/my_crew2/short_term1/: chroma.sqlite3
crew_ai/memory_and_external_tools/src/memory_and_external_tools/: main.py
crew_ai/memory_and_external_tools/src/memory_and_external_tools/crews/: custom_tools.py  first_crew.py  tool_agent.py
crew_ai/memory_and_external_tools/src/memory_and_external_tools/crews/config/: tasks.yaml
crew_ai/multiple_agents/: pyproject.toml  question_paper.txt
crew_ai/poem_generator/: crewai_flow.html  poem.txt  poemurdu.txt  pyproject.toml
crew_ai/poem_generator/src/poem_generator/: __init__.py  main.py
crew_ai/poem_generator/src/poem_generator/crews/: poem_generator.py
crew_ai/poem_generator/src/poem_generator/crews/config/: task.yaml
crew_ai/poem_generator/src/poem_generator/crews/configs/: agents.yaml  tasks.yaml
crew_ai/second_uv_project/: README.md  pyproject.toml
crew_ai/second_uv_project/src/new/: index.py
crew_ai/second_uv_project/src/second_uv_project/: __init__.py  hi.py
crew_ai/test_project_coping/: README.md  poem.txt  pyproject.toml
fastapi/: set_cookies.py
hugging_face_deployment_steps/ai_chatbot/: .env-example  Dockerfile  README.md  pyproject.toml
hugging_face_deployment_steps/ai_chatbot/.chainlit/: config.toml
hugging_face_deployment_steps/ai_chatbot/chatbot/: main.py  my_cl_app.py
hugging_face_deployment_steps/ai_chatbot/public/: custom.css
hugging_face_deployment_steps/chainlit_with_fastapi/: .dockerignore  pyproject.toml
hugging_face_deployment_steps/hello_fastapi/: .dockerignore  Dockerfile  README.md  pyproject.toml
hugging_face_deployment_steps/hello_fastapi_uvicorn/: .gitignore  Dockerfile  README.md  pyproject.toml
langchain/: .gitignore  README.md  generated_music.mid  index.ipynb
langchain/faq_rag/: index.ipynb  rag.ipynb
langchain/first_chat_bot/: index.ipynb
langchain/langsmith/: index.ipynb
langchain/module_0/: add_data_in_list_langgraph.ipynb  basics.ipynb  nested_keys.ipynb
langchain/module_1/: 00_edges_nodes_graph.ipynb  01_conditional_edge.ipynb  02_tools_messages.ipynb  03_chain_reducers.ipynb  04_router.ipynb  agent.ipynb  agent_memory.ipynb  basics.ipynb
langchain/module_2/: 00_edges_nodes_graph.ipynb  1_state_schema.ipynb  2_state_reducer.ipynb  3_multiple_schemas.ipynb  4_trim_filter_messages.ipynb  5_chatbot_summarization.ipynb  6.1_chatbot_with_our_db_file.ipynb  (+3 more)
learning_concepts/: chatbot.ipynb  convert_webpintopng.ipynb  cpu_gpu_tpu.md  gemini_model.ipynb  generate_images_by_gemini_free.ipynb  generate_images_frees.ipynb  germany_appotmant.ipynb  imagestores_and_llamaapifastapi.txt  index.ipynb  low_level_high_level_lang.md  merging_audio.ipynb  neural_network.md  operating_system.md  sdk.md  text_animation_in video.ipynb  texttoimagewithoutllm.ipynb  timestamp.ipynb  typewriter_in_image.ipynb  youtube_audio_down.ipynb  youtube_video_download.ipynb
openai_agent_sdk/: chatbot.ipynb
prompt_engienring/: gemini_structurd_output.ipynb  splite_story.ipynb
python/: debugging.py  test.ipynb
requests/: img_gen_requests.ipynb
sadtalker/: liveanimatedmyavatar.ipynb
vercel_blob_storage/: index.py
website_scraper/: sound_effect_scrapper.ipynb
(+122 files in other folders)
