[project]
name = "chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arman229", email = "armanashraf015@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
chainlit = "chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
