[project]
name = "match_profile_to_positions"
version = "0.1.0"
description = "match_profile_to_positions using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "match_profile_to_positions.main:kickoff"
plot = "match_profile_to_positions.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
