[project]
name = "second-uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arman229", email = "armanashraf015@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
second-uv-project = "second_uv_project:main"
new_index = "new.index:main"
second_hi = "second_uv_project.hi:hi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
